@@ -34,6 +34,7 @@ from Mailman import Errors
 from Mailman import Message
 from Mailman import i18n
 from Mailman.Handlers.Moderate import ModeratedMemberPost
+from Mailman.ListAdmin import HELDMSG
 from Mailman.ListAdmin import readMessage
 from Mailman.Cgi import Auth
 from Mailman.htmlformat import *
@@ -769,8 +770,12 @@ def process_form(mlist, doc, cgidata):
         forwardaddrkey = 'forward-addr-%d' % request_id
         bankey = 'ban-%d' % request_id
         # Defaults
-        msgdata = mlist.GetRecord(request_id)[5]
-        comment = msgdata.get('rejection_notice', _('[No explanation given]'))
+        if mlist.GetRecordType(request_id) == HELDMSG:
+            msgdata = mlist.GetRecord(request_id)[5]
+            comment = msgdata.get('rejection_notice',
+                                  _('[No explanation given]'))
+        else:
+            comment = _('[No explanation given]')
         preserve = 0
         forward = 0
         forwardaddr = ''
